Refactor to avoid deprecated constructor for `Integer(int)`.